# Multi-Agent-Quantum-Materials-Assistant

./: .dockerignore  .ebignore  .env.example  .gitignore  AWS_Authentication_Pattern.md  BEANSTALK_DEPLOYMENT_GUIDE.md  BRAKET_SETUP.md  COGNITO_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_FILES.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerrun.aws.json  LICENSE  MCP_ARCHITECTURE.md  MCP_MATERIALS_PROJECT_INTEGRATION.md  MCP_TEST_PROMPTS.md  MCP_VERIFICATION_GUIDE.md  README.md  SSL_SETUP_GUIDE.md  app.py  application.py  apprunner.yaml  auth_module.py  create_deployment_zip.py  create_ssl_cert.py  demo_mode.py  deploy_fixed_integration.py  deploy_with_mcp.py  install_braket.py  requirements.txt  run_app.bat  run_app.py  run_local.py
.ebextensions/: 01_environment.config  01_streamlit.config  04_mcp_setup.config  05_alb_https.config  05_security_headers.config  06_cloudfront_headers.config  07_cognito_config.config
.streamlit/: config.toml
BraketMCP/amazon-braket-mcp-server/: CHANGELOG.md  Dockerfile  Dockerfile.fixed  NOTICE  README.md  docker-healthcheck.sh  pyproject.toml
BraketMCP/amazon-braket-mcp-server/awslabs/: __init__.py
BraketMCP/amazon-braket-mcp-server/awslabs/amazon_braket_mcp_server/: __init__.py  braket_service.py  exceptions.py  models.py  server.py
BraketMCP/amazon-braket-mcp-server/awslabs/amazon_braket_mcp_server/visualization/: __init__.py  ascii_visualizer.py  visualization_utils.py
agents/: __init__.py  aws_strands_coordinator.py  base_agent.py  dft_parameter_agent.py  strands_agentic_loop.py  strands_coordinator.py  strands_dft_agent.py  strands_structure_agent.py  strands_supervisor.py  structure_matching_agent.py  supervisor_agent.py
config/: .env.example  admin_auth.py  app_config.py  auth_module.py  bootstrap_admin.py  cognito_auth.py  custom_cognito_auth.py
deployment/: Dockerfile  deploy_fixed_integration.py  setup_cloudfront.py
docs/: agentic-architecture.md  architecture.md  braket-integration.md  deployment-guide.md  materials-project-mcp-integration.md  securityGuide.md  user-guide.md
docs/images/: README.md
enhanced_mcp_materials/: __init__.py  __main__.py  aws_server.py  local_server.py  pyproject.toml  server.py  setup.py
enhanced_mcp_materials/enhanced_mcp_materials/: __init__.py  server.py
models/: base_model.py  claude_opus_model.py  claude_sonnet_model.py  deepseek_model.py  llama3_model.py  llama4_model.py  nova_pro_model.py  openai_model.py  qwen_model.py
setup/: setup_admin_roles.py  setup_cognito.py  setup_secrets.py
utils/: audit_logger.py  aws_client.py  braket_integration.py  code_security.py  config_validator.py  debug_logger.py  enhanced_mcp_client.py  local_mcp_wrapper.py  logging_display.py  material_selector.py  materials_project_agent.py  mcp_decorators.py  mcp_monitor.py  mcp_tools_wrapper.py  rate_limiter.py  secrets_manager.py  shared_exceptions.py  structured_logger.py  visualization_tools.py
